--- a/main.ipynb
+++ b/main.ipynb
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "id": "a9020111",
    "metadata": {},
    "outputs": [
@@ -522,25 +522,33 @@
      "output_type": "stream",
      "text": [
       "533\n",
-      "2015 0\n",
-      "2014 0\n",
-      "2013 0\n",
-      "2012 0\n",
-      "2011 0\n",
-      "2010 -1.0\n",
-      "2009 1.0\n",
-      "2008 -1.0\n",
-      "2007 -1.0\n",
-      "2006 -2.0\n",
-      "2005 -1.0\n",
-      "2004 -1.0\n",
-      "2003 -2.0\n"
+      "2015 4303.0\n",
+      "2014 3980.0\n",
+      "2013 3816.0\n",
+      "2012 3608.0\n",
+      "2011 3531.0\n",
+      "2010 3481.0\n",
+      "2009 3676.0\n",
+      "2008 3441.0\n",
+      "2007 3209.0\n",
+      "2006 3246.0\n",
+      "2005 3140.0\n",
+      "2004 3122.0\n",
+      "2003 3117.0\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "\n",
+    "# More tables here\n",
+    "# https://www.bls.gov/cps/tables.htm\n",
+    "\n",
+    "# https://data.bls.gov/apps/demographic-comparison-matrix/home.htm\n",
+    "\n",
+    "# treemaps https://docs.bokeh.org/en/latest/docs/examples/topics/hierarchical/treemap.html\n",
+    "\n",
+    "# https://data.census.gov/table/ACSST1Y2015.S1501?t=Education&g=040XX00US06\n",
     "\n",
     "df_bls_2015_headers_1 = pd.read_excel('assets/bls_cpsaat09_2002_to_2015.xlsx', sheet_name='2015', header=0).fillna('Unknown').iloc[0]\n",
     "df_bls_2015_headers_2 = pd.read_excel('assets/bls_cpsaat09_2002_to_2015.xlsx', sheet_name='2015', header=1).fillna('Unknown').iloc[0]\n",
@@ -590,12 +598,20 @@
     "\n",
     "\n",
     "# Check L0 Sums vs Totals\n",
-    "for tab in tabs:\n",
-    "    print(tab, df_bls_all_filtered_L0[df_bls_all_filtered_L0['year'] == tab]['total_16_years_and_over_py'].sum(axis=0) - df_bls_all_filtered_Totals[df_bls_all_filtered_Totals['year'] == tab]['total_16_years_and_over_py'].sum(axis=0))\n",
+    "# for tab in tabs:\n",
+    "#     print(tab, df_bls_all_filtered_L0[df_bls_all_filtered_L0['year'] == tab]['total_16_years_and_over_py'].sum(axis=0) - df_bls_all_filtered_Totals[df_bls_all_filtered_Totals['year'] == tab]['total_16_years_and_over_py'].sum(axis=0))\n",
     "\n",
-    "for val in df_bls_all_filtered_L0['total_16_years_and_over_py'].to_list():\n",
-    "    if type(val) == str:\n",
-    "        print(val)\n",
+    "\n",
+    "# print(len(df_bls_all_filtered_L0[(df_bls_all_filtered_L0['year'] == '2015')]))\n",
+    "# print(df_bls_all_filtered_L0[(df_bls_all_filtered_L0['year'] == '2015')].columns)\n",
+    "# print(df_bls_all_filtered_L0[(df_bls_all_filtered_L0['year'] == '2015')]['occupation'].unique())\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Sanity Check trend\n",
+    "for tab in tabs:\n",
+    "    print(tab, df_bls_all_filtered_L0[(df_bls_all_filtered_L0['year'] == tab) & (df_bls_all_filtered_L0['occupation'] == 'Computer and mathematical occupations')]['total_16_years_and_over_py'].sum(axis=0))\n",
+    "\n",
     "\n",
     "\n",
     "\n"
