z tests and instructions for notebooks

--- a/kolbe_work.ipynb
+++ b/kolbe_work.ipynb
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -1600,7 +1600,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1609,13 +1609,13 @@
     "data_to_be_pivoted = pd.read_excel(\"assets/df_merge_bls_l1_pivoted.xlsx\", \n",
     "                                     sheet_name=\"df_merge_bls_l1\", \n",
     "                                     header=0)\n",
-    "data_to_be_pivoted = data_to_be_pivoted[data_to_be_pivoted['year'] == 2015]\n",
+    "data_to_be_pivoted = data_to_be_pivoted[data_to_be_pivoted['year'] == 2015] \n",
     "data_to_be_pivoted.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -1709,7 +1709,7 @@
        "Management occupations                          0.102928  "
       ]
      },
-     "execution_count": 187,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1733,7 +1733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -1811,7 +1811,7 @@
        "Management occupations                            53.0  "
       ]
      },
-     "execution_count": 195,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1827,7 +1827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -1853,9 +1853,11 @@
        "      <th></th>\n",
        "      <th>number_of_workers_all_sum</th>\n",
        "      <th>number_of_workers_women_sum</th>\n",
+       "      <th>%women</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>l1</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
@@ -1865,16 +1867,19 @@
        "      <th>Architecture and engineering occupations</th>\n",
        "      <td>2655</td>\n",
        "      <td>382</td>\n",
+       "      <td>14.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Life, physical, and social science occupations</th>\n",
        "      <td>1174</td>\n",
        "      <td>516</td>\n",
+       "      <td>44.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Management occupations</th>\n",
        "      <td>12479</td>\n",
        "      <td>5146</td>\n",
+       "      <td>41.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1887,14 +1892,20 @@
        "Life, physical, and social science occupations                       1174   \n",
        "Management occupations                                              12479   \n",
        "\n",
-       "                                                number_of_workers_women_sum  \n",
-       "l1                                                                           \n",
-       "Architecture and engineering occupations                                382  \n",
-       "Life, physical, and social science occupations                          516  \n",
-       "Management occupations                                                 5146  "
+       "                                                number_of_workers_women_sum  \\\n",
+       "l1                                                                            \n",
+       "Architecture and engineering occupations                                382   \n",
+       "Life, physical, and social science occupations                          516   \n",
+       "Management occupations                                                 5146   \n",
+       "\n",
+       "                                                %women  \n",
+       "l1                                                      \n",
+       "Architecture and engineering occupations          14.0  \n",
+       "Life, physical, and social science occupations    44.0  \n",
+       "Management occupations                            41.0  "
       ]
      },
-     "execution_count": 200,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1904,8 +1915,17 @@
     "                                values=['number_of_workers_women_sum', 'number_of_workers_all_sum'], index='l1',\n",
     "                       aggfunc=\"sum\", fill_value=0)\n",
     "\n",
-    "#workers_table['%women'] = ((workers_table['number_of_workers_women_sum']/student_table['number_of_workers_all_sum']) * 100).round(decimals=0)\n",
+    "workers_table['%women'] = ((workers_table['number_of_workers_women_sum']/workers_table['number_of_workers_all_sum']) * 100).round(decimals=0)\n",
     "workers_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# t tests? comparing women % in students to workers for each field\n"
    ]
   },
   {
